Revision history for DBIx::Class

        - count no longer returns negative values after slice
          (report and test from JOHANL)
        - rebless before building datetime_parser
          (patch from mattlaw / Matt Lawrence)

0.08003 2007-07-14 18:01:00
        - improved populate bulk_insert mode
        - fixed up multi_create to be more intelligent about PK<->PK rels
        - fix many-many rels to not use set_columns
        - Unmarked deploy as experimental since it isn't anymore
        - Removed Cwd dep since it's not required and causes problems
          with debian packaging
        - Patch to fix ? in data for NoBindVars (from Tom Hukins)
        - Restored mk_classaccessor method for compatibility
        - Fixed group_by problem with oracle limit syntax
        - Fixed attr merging problem
        - Fixed $rs->get_column w/prefetch  problem

0.08002 2007-06-20 06:10:00
        - add scope guard to Row::insert to ensure rollback gets called
        - more heuristics in Row::insert to try and get insert order right
        - eliminate vestigial code in PK::Auto
        - more expressive DBI errors
        - soften errors during deploy
        - ensure_connected before txn_begin to catch stomping on transaction
          depth
        - new method "rethrow" for our exception objects

0.08001 2007-06-17 21:21:02
        - Cleaned up on_connect handling for versioned
        - removed DateTime use line from multi_create test
        - hid DBIx::ContextualFetch::st override in CDBICompat

0.08000 2007-06-17 18:06:12
        - Fixed DBIC_TRACE debug filehandles to set ->autoflush(1)
        - Fixed circular dbh<->storage in HandleError with weakref

0.07999_06 2007-06-13 04:45:00
        - tweaked Row.pm to make last_insert_id take multiple column names
        - Fixed DBIC::Storage::DBI::Cursor::DESTROY bug that was
          messing up exception handling
        - added exception objects to eliminate stacktrace/Carp::Clan
          output redundancy